2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.addin.xml: Bump MD version.

2007-09-19  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects/CustomCommand.cs: Implement custom substitution tag
	  array for custom commands so that the tags are for the project being
	  compiled rather than the project selected in the IDE. Bonus is that it
	  no longer depends on the tags provider in MonoDevelop.Ide.

2007-09-15  Jérémie Laval <jeremie.laval@gmail.com>

	* MonoDevelop.Projects.Parser/ICompilationUnitBase.cs:
	  Implemented ErrorInfo stub.

2007-09-16  Eric Butler <eric@extremeboredom.net>

	* MonoDevelop.Projects/Project.cs (DefaultNamespace): Call
	NotifyModified() on set.

	* MonoDevelop.Projects/ProjectFile.cs (ResourceId): Call
	NotifyFilePropertyChangedInProject() on set.

2007-09-15  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Projects/Project.cs (GetDefaultResourceId): Remove.
	* MonoDevelop.Projects/ProjectServiceExtension.cs
	(ProjectServiceExtension.GetDefaultResourceId): New.
	* MonoDevelop.Projects/ProjectService.cs (ProjectService.GetDefaultResourceId): New.
	(DefaultProjectServiceExtension.GetDefaultResourceId): Override.
	* MonoDevelop.Projects/ProjectFile.cs (ResourceId): Update to use the
	ProjectService.GetDefaultResourceId .

2007-09-14  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs: ImplementInterface
	  should implement inherited interfaces. Fixes Bugzilla #82791.

2007-09-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Ambience/IAmbience.cs,
	  MonoDevelop.Projects.Ambience/ConversionFlags.cs: Renamed file.
	* MonoDevelop.Projects.Ambience/ITypeNameResolver.cs,
	  MonoDevelop.Projects.Ambience/Ambience.cs,
	  MonoDevelop.Projects.Ambience/NetAmbience.cs, MonoDevelop.Projects.mdp,
	  Makefile.am: Added support for ITypeNameResolver, which allows properly
	  formating type names in different namespace scopes.
