@@ -1,3 +1,10 @@
+2007-09-21  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.Projects/ProjectReference.cs: Add StoredReference property
+	  that can be used to access the stored internal reference string, because
+	  if that version's not in the GAC then the Reference property will have
+	  been bumped to the GAC version while the project's loaded.
+
 2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Projects.addin.xml: Bump MD version.
